# openproject-tui

./: .env.example  .pre-commit-config.yaml  README.md  Taskfile.yml  pyproject.toml  pytest.ini
src/: __init__.py  __main__.py  app.py  client.py  config.py  models.py
src/screens/: __init__.py  help.py  login.py  main.py  work_package_details.py  work_package_form.py  work_packages.py
src/widgets/: __init__.py  work_package_panel.py
tests/: __init__.py  test_client.py  test_fixtures.py  test_models.py  test_work_package_crud.py
tests/screens/: test_help.py  test_login.py  test_main.py  test_search.py  test_work_package_details.py  test_work_packages.py
